# dwca-cloud-geospatial

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.codex/: AGENTS.md
.codex/prompts/: 01_project_skeleton.md  02_dwca_inspection.md  03_occurrence_parser.md  04_occurrence_normalization.md  05_quality_rules.md  06_flatgeobuf_writer.md  07_geoparquet_writer.md  08_manifest_metadata_writers.md  (+12 more)
demo/: README.md
docs/: converter.md  deployment.md  developer_setup.md  development_plan.md  dwca_parser.md  output_format.md  project_overview.md  viewer_contract.md
examples/: DWCA-Cloud-Geospatial_Demo_Notebook.ipynb
session_logs/: 2026-06-06_01_project_skeleton.md  2026-06-06_prompt_flow_creation.md  2026-06-07_02_dwca_inspection.md  2026-06-07_03_occurrence_parser.md  2026-06-09_04_occurrence_normalization.md  2026-06-09_05_quality_rules.md  2026-06-09_06_flatgeobuf_writer.md  2026-06-12_07_geoparquet_writer.md  2026-06-13_08_manifest_metadata_writers.md  2026-06-13_09_bundle_validation.md  2026-06-16_10_core_api_cli.md  2026-06-18_10b_large_archive_streaming_geoparquet.md  2026-06-18_10c_flatgeobuf_geopackage_staging.md  2026-06-19_11_viewer_contract.md  2026-06-19_12_static_viewer.md  2026-06-20_13_tkinter_gui.md  2026-06-20_14_gbif_doi_citation.md  2026-06-20_15_demo_docs_hardening.md  2026-06-21_viewer_ui_cosmetic_hardening.md
tests/: conftest.py  test_bundle_metadata.py  test_bundle_validation.py  test_cli.py  test_conversion.py  test_dwca_inspection.py  test_fixture_paths.py  test_flatgeobuf_writer.py  test_gbif.py  test_geoparquet_writer.py  test_gui.py  test_occurrence_normalization.py  test_occurrence_parser.py  test_static_viewer.py  test_viewer_contract.py
viewer/: README.md  app.js  index.html  styles.css
(+69 files in other folders)
