[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dwca-cloud-geospatial"
version = "0.1.0"
description = "Convert Darwin Core Archive datasets into cloud-friendly geospatial outputs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
authors = [
  { name = "DwC-A Cloud Geospatial contributors" }
]
keywords = ["darwin-core", "dwca", "geospatial", "geoparquet", "flatgeobuf"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: GIS"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8"
]
geoparquet = [
  "pyarrow>=24"
]
flatgeobuf = [
  "pyogrio>=0.12",
  "pyarrow>=24"
]
validation = [
  "duckdb>=1.0",
  "geoparquet-io",
  # Keep validation installs on a binary wheel in the verified Python 3.13
  # macOS .venv; newer pyproj releases may fall back to source builds that
  # require a system PROJ installation.
  "pyproj==3.7.0",
  "pyarrow>=24"
]

[project.scripts]
dwca-cloud-geospatial = "dwca_cloud_geospatial.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "--strict-config",
  "--strict-markers"
]
